--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -3,13 +3,13 @@ on:
   push:
   workflow_dispatch:
   schedule:
-    - cron:  '0 * * * *'
+    - cron:  '53 6-20 * * *'
 jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name:
+      - name: run
         run: |
           ./gradlew run
           mkdir public
