--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,8 +2,8 @@ name: CI
 on:
   push:
   workflow_dispatch:
-  schedule:
-    - cron:  '53 6-20 * * *'
+#   schedule:
+#     - cron:  '53 6-20 * * *'
 jobs:
   build:
     runs-on: ubuntu-20.04
